--- a/index.html
+++ b/index.html
@@ -545,8 +545,9 @@ for (var i = 0; i < geojson.features.length; i++) {
 var overlay = L.mapbox.featureLayer().addTo(map)
     .setGeoJSON(geojson)
     .eachLayer(function(layer) {
-        var osmID = layer.feature.id.replace('node/', '');
-        var content = 'OSM ID <a href="http://openstreetmap.org/node/' + osmID + '" target="_new">' + osmID + '</a>';
+        var name = layer.feature.properties.name ? layer.feature.properties.name : 'Unnamed Fountain';
+        var id = layer.feature.id.replace('node/', '');
+        var content = '<h1>' + name + '</h1>OSM ID <a href="http://openstreetmap.org/node/' + id + '" target="_new">' + id + '</a>';
         layer.bindPopup(content);
     });
 </script>
